# ibis-compatibility

./: LICENSE.md  README.md  pyproject.toml
src/ibis_compatibility/: __init__.py  checker.py
tests/: conftest.py  test_checker.py
tests/static/: matrix.html
